Fix spacing on large and small sizes

--- a/css/less/main.less
+++ b/css/less/main.less
@@ -305,10 +305,10 @@ button {
 
 .logo {
     margin: 0 auto;
-    width: 70%;
+    width: 60%;
 
     @media (min-width: @small) {
-        width: 80%;
+        width: 70%;
     }
 }
 
